added solver